# my_project

./: .gitignore  .pre-commit-config.yaml  LICENSE  project.db  pyproject.toml
.confidential/: default.json
.github/workflows/: ci.yml  mystuff.py
project/: settings.py  urls.py
