[tool.poetry]
name = "my_project"
version = "0.1.0"
description = ""
authors = ["Riley Shea <RileyMShea@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0"
confidential = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.1"
pytest-cov = "^2.8.1"
pytest-django = "^3.7.0"
pytest-xdist = "^1.30.0"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
