[tool.poetry]
name = "my_project"
version = "0.1.0"
description = ""
authors = ["Riley Shea <RileyMShea@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0"
confidential = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.1"
pytest-cov = "^2.8.1"
pytest-django = "^3.7.0"
pytest-xdist = "^1.30.0"
black = {version = "^19.10b0", allow-prereleases = true}
pre-commit = "^1.20.0"
pylint = "^2.4.4"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "conda", path = "environment.yml"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

# Black: Opinonated code formatter
# Minimizes diffs, minimal config options
# https://github.com/psf/black
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

# The first grouping are directories
# hidden dotDirectories have a backslash as an escape character
# single files come after

exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

# Sort and format imports
# Settings are compatible with [tool.black] from above
[tool.isort]
multi_line_output = 3
include_trailing_comma = true # True would be uppercase if this config was in a isort.cfg instead
force_grid_wrap = 0
use_parentheses = true
line_length = 88
